Stretching sqlalchemy legs

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -22,6 +22,7 @@
 <form method="POST" action="/add">
 <p>Name of new computer scientist: <input type="text" name="name"> <input type="submit" value="Add"></p>
 </form>
+<div>{{test}}</div>
 
 </body>
 
