--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -6,16 +6,17 @@
     }
   </style>
 
+  <body>
+    <h1>Welcome, {{user}}</h1>
+    
+    <h1>Some famous Computer Scientists</h1>
+    <div>{{data}}</div>
 
-<body>
-  <h1>Some famous Computer Scientists</h1>
-  <div>{{data}}</div>
-
-  <div>
-    {% for n in data %}
-    <div>{{n}}</div>
-    {% endfor %}
-  </div>
+    <div>
+      {% for n in data %}
+      <div>{{n}}</div>
+      {% endfor %}
+      </div>
 
 <p><a href="/another">Go to the other page</a></p>
 
@@ -23,8 +24,11 @@
 <p>Name of new computer scientist: <input type="text" name="name"> <input type="submit" value="Add"></p>
 </form>
 <div>{{test}}</div>
-
-</body>
-
-
+  
+    <p><a href="/another">Go to the other page</a></p>
+    <div>
+        {% block content %}
+        {% endblock %}
+      </div>
+  </body>
 </html>
