--- a/webserver/templates/userPage.html
+++ b/webserver/templates/userPage.html
@@ -2,6 +2,10 @@
 {% extends "index.html" %}
 
 {% block content %}
+<h1>Welcome, {{username}}</h1>
+<br>
+<br>
+<br>
 <h1>Some famous Computer Scientists</h1>
 <div>{{data}}</div>
 
