--- a/webserver/templates/login.html
+++ b/webserver/templates/login.html
@@ -11,7 +11,7 @@
         <p>One day, this will be the login page. For now, it is blank</p>
         <p>In the meantime, click "submit" below, and see what happens.</p>
         <form method="POST" action="/user">
-            <p>Login with the default name: <input type="text" name="login" value="jjoe00"> <input type="submit"></p>
+            <p>Login with the default name: <input type="text" name="user" value="jjoe00"> <input type="submit"></p>
         </form>
     </body>
 
