trying to figure out how to return multiple rows in a query

--- a/webserver/templates/userPage.html
+++ b/webserver/templates/userPage.html
@@ -28,6 +28,8 @@
   {% endfor %}
 </div>
 
+{{cursorKeys}}
+
 <p><a href="/another">Go to the other page</a></p>
 
 <!--<form method="POST" action="/add">
