--- a/webserver/templates/userPage.html
+++ b/webserver/templates/userPage.html
@@ -17,7 +17,7 @@
 <h1>Tracking Accounts</h1>
 <div>
   {% for n in trackAcc %}
-    <div>{{n}}</div>
+    <a href = "/user/{{n}}">{{n}}</a><br>  
   {% endfor %} 
 </div>
 <br>
@@ -28,10 +28,11 @@
   {% endfor %}
 </div>
 
-{{cursorKeys}}
-
+{% for n in cursorKeys %} 
+  {{n}}
+{% endfor %}
 <p><a href="/another">Go to the other page</a></p>
-
+<!---->
 <!--<form method="POST" action="/add">
 <p>Name of new computer scientist: <input type="text" name="name"> <input type="submit" value="Add"></p>
 </form> -->
